test/fail/basic_syntax/assign_nest.lily
#[
SyntaxError: Cannot nest an assignment within an expression.
    from assign_nest.lily:7:
]#

var a = 10
var b = (a = 10)
